--- a/css/footer.css
+++ b/css/footer.css
@@ -17,6 +17,8 @@ footer {
 	background-color: rgba(255, 255, 255, 0.8);
 	padding-top: 30px;
 	padding-bottom: 50px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 footer h3 {
