--- a/css/footer.css
+++ b/css/footer.css
@@ -48,7 +48,7 @@ ul.contacts > li::after {
 	box-sizing: border-box;
 	width: 1px;
 	height: 100%;
-	border: 1px solid rgba(51, 51, 51, 0.5);
+	border-left: 1px solid rgba(51, 51, 51, 0.5);
 	right: -5px;
 }
 
