--- a/css/default.css
+++ b/css/default.css
@@ -6,6 +6,8 @@
 
 body {
 	-webkit-text-size-adjust : 100%;
+	-webkit-font-smoothing : antialiased;
+	 -moz-osx-font-smoothing : grayscale;
 	}
 
 html, body,
