--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,12 +1,26 @@
 @charset "UTF-8";
 
+/* roboto-condensed-300 - cyrillic_latin */
 @font-face {
-    	font-family : "Assistant-ExtraLight";
-    	src : url("../fonts/Assistant-ExtraLight.eot");
-    	src : url("../fonts/Assistant-ExtraLight.eot?#iefix") format("embedded-opentype"),
-    		url("../fonts/Assistant-ExtraLight.woff") format("woff"),
-    		url("../fonts/Assistant-ExtraLight.ttf") format("truetype"),
-			url("../fonts/Assistant-ExtraLight.otf") format("opentype");
-   		font-style : normal;
-    	font-weight : normal;
-		}
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/roboto-condensed-v16-cyrillic_latin-300.eot");
+  src: url("../fonts/roboto-condensed-v16-cyrillic_latin-300.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-300.woff2") format("woff2"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-300.woff") format("woff"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-300.ttf") format("truetype"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-300.svg#RobotoCondensed") format("svg");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.eot");
+  src: url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.woff2") format("woff2"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.woff") format("woff"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.ttf") format("truetype"),
+       url("../fonts/roboto-condensed-v16-cyrillic_latin-regular.svg#RobotoCondensed") format("svg");
+}
