--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 
 div.container {
 	position: relative;
-	min-height: 100%;
-	max-height: 1400px;
+	width: 100%;
+	min-height: 100vh;
 	margin: 0 auto;
 	color: rgb(51, 51, 51);
 }
