--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,7 +2,7 @@
 
 /* roboto-condensed-300 - cyrillic_latin */
 @font-face {
-  font-family: "Roboto Condensed";
+  font-family: "Light";
   font-style: normal;
   font-weight: 300;
   src: url("../fonts/roboto-condensed-v16-cyrillic_latin-300.eot");
