--- a/css/footer.css
+++ b/css/footer.css
@@ -19,7 +19,6 @@ footer {
 	padding-bottom: 30px;
 	margin-left: auto;
 	margin-right: auto;
-	/* overflow: hidden; */
 }
 
 footer h3 {
@@ -31,7 +30,6 @@ footer h3 {
 
 ul.contacts {
 	max-width: 90%;
-	font : normal 21px/33px "Light", Arial, sans-serif;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -39,19 +37,9 @@ ul.contacts {
 
 ul.contacts > li {
 	display: inline;
-	position: relative;
 	margin: 5px;
 	text-align: center;
-}
-
-ul.contacts > li:not(:first-child)::before {
-	content: "\0000a0|\0000a0";
-	position: absolute;
-	width: 1px;
-	height: inherit;
-	border-left: rgba(51, 51, 51, 1);
-	left: -15px;
-	top: -5px;
+	white-space: nowrap;
 }
 
 .copyright {
@@ -98,12 +86,13 @@ ul.contacts > li:not(:first-child)::before {
 	.footer_wrapper {
 		padding: 15px 30px;
 	}
-
 }
 
-@media (min-width: 361px) {
-	ul.contacts > li {
-		white-space: nowrap;
+@media (min-width: 481px) {
+	ul.contacts {
+		margin-left: 20px;
+		margin-right: 20px;
+		font : normal 21px/33px "Light", Arial, sans-serif;
 	}
 }
 
@@ -115,6 +104,7 @@ ul.contacts > li:not(:first-child)::before {
 	ul.contacts {
 		margin-left: 20px;
 		margin-right: 20px;
+		font : normal 18px/36px "Light", Arial, sans-serif;
 	}
 }
 
