--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,13 @@ div.container {
 a {
 	text-decoration: none;
 	color: inherit;
+	transition : all 0.25s ease;
 }
 
 ul {
 	list-style: none;
+}
+
+a:hover {
+	color: rgba(230, 46, 46, 1)
 }
