--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ div.container {
 
 a {
 	text-decoration: none;
-	color: inherit;
+	color: rgba(214, 0, 0, 1);
 	transition : all 0.25s ease;
 }
 
@@ -19,5 +19,5 @@ ul {
 }
 
 a:hover {
-	color: rgba(230, 46, 46, 1)
+	color: rgba(169, 0, 0, 1)
 }
