--- a/css/footer.css
+++ b/css/footer.css
@@ -46,11 +46,29 @@ ul.contacts > li {
 	width: 100%;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	background-color: rgba(255, 255, 255, 1);
 }
 
 .copyright > p {
 	font : normal 20px/25px "Light", Arial, sans-serif;
 	text-align: center;
+}
+
+div.telo {
+	position: relative;
+	width: 100%;
+	height: 1000px;
+}
+
+.down_level {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	padding-bottom: 350px;
+	background: url("../img/scentstrip.jpg") no-repeat 50% 0;
+	background-size: cover;
+	background-attachment: fixed;
 }
 
 @media (min-width: 1401px) {
