--- a/css/footer.css
+++ b/css/footer.css
@@ -53,7 +53,15 @@ ul.contacts > li {
 	font : normal 20px/25px "Light", Arial, sans-serif;
 	text-align: center;
 }
+footer a {
+	display: inline-block;
+	color: rgba(214, 0, 0, 1);
+	transition : all 0.25s ease;
+}
 
+footer a:hover {
+	color: rgba(169, 0, 0, 1)
+}
 div.telo {
 	position: relative;
 	width: 100%;
@@ -61,9 +69,9 @@ div.telo {
 }
 
 .down_level {
-	position: absolute;
+	/* position: absolute;
 	left: 0;
-	bottom: 0;
+	bottom: 0; */
 	width: 100%;
 	padding-bottom: 350px;
 	background: url("../img/scentstrip.jpg") no-repeat 50% 0;
