--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 @charset "UTF-8";
 
+body {
+	position: relative;
+}
+
 div.container {
 	position: relative;
 	width: 100%;
 	min-height: 100vh;
 	margin: 0 auto;
 	color: rgb(51, 51, 51);
+	transition: all .4s cubic-bezier(0.5,0,0.3,1);
 }
 
 a {
