--- a/css/nav.css
+++ b/css/nav.css
@@ -2,6 +2,7 @@
 
 nav {
 	position: fixed;
+	font : normal 20px/30px "Light", Arial, sans-serif;
 }
 
 nav > ul {
@@ -9,7 +10,6 @@ nav > ul {
 }
 
 nav > ul > li {
-	font : normal 20px/30px "Light", Arial, sans-serif;
 	text-transform: uppercase;
 }
 
@@ -36,12 +36,11 @@ li.lang_mob > ul > li {
 	margin-right: 20px;
 }
 
-
 @media (min-width: 1041px) {
 	nav {
 		top: 20px;
-		left: calc(50% - 210px);
-		width: 560px;
+		left: calc(50% - 190px);
+		width: 600px;
 		z-index: 11;
 	}
 	nav > ul > li {
@@ -55,7 +54,9 @@ li.lang_mob > ul > li {
 		height: 100vh;
 		box-shadow: -1px 0 10px rgba(0, 0, 0, 0.15);
 		z-index: 125;
-		background-color: rgba(230, 230, 230, 1);
+		background-color: rgba(250, 250, 250, 1);
+		transition: all .3s ease-out;
+		/* transition: all .3s cubic-bezier(0.5,0,0.3,1); */
 	}
 
 	nav.mob {
@@ -75,7 +76,7 @@ li.lang_mob > ul > li {
 
 	nav.mob > ul {
 		padding: 30px 20px 20px 20px;
-		transition: all .4s;
+		transition: all .3s ease-out;
 	}
 
 	nav.mob > ul > li {
@@ -97,11 +98,11 @@ li.lang_mob > ul > li {
 
 @media (max-width: 480px) {
 	nav {
-		width: 200px;
-		right: -205px;
+		width: 160px;
+		right: -165px;
 	}
 
 	nav.mob::after {
-		right: 200px;
+		right: 160px;
 	}
 }
