--- a/css/nav.css
+++ b/css/nav.css
@@ -13,28 +13,13 @@ nav > ul > li {
 	text-transform: uppercase;
 }
 
-nav a.menu_actual {
+nav a.selected {
 	color: rgba(255, 10, 10, 1);
 }
 
 nav a:hover {
 	color: rgba(230, 46, 46, 1);
 }
-
-/* li.lang_mob {
-	height: 30px;
-}
-
-li.lang_mob > ul {
-	height: 100%;
-}
-
-li.lang_mob > ul > li {
-	display: inline-block;
-	width: 30px;
-	height: 100%;
-	margin-right: 20px;
-} */
 
 @media (min-width: 1041px) {
 	nav {
@@ -54,7 +39,7 @@ li.lang_mob > ul > li {
 	nav {
 		height: 100vh;
 		box-shadow: -1px 0 10px rgba(0, 0, 0, 0.15);
-		z-index: 125;
+		z-index: 25;
 		background-color: rgba(250, 250, 250, 1);
 	}
 
@@ -71,7 +56,6 @@ li.lang_mob > ul > li {
 		width: 100vw;
 		height: calc(100vh - 70px);
 		background-color: rgba(0, 0, 0, .15);
-
 	}
 
 	nav.mob > ul {
@@ -97,11 +81,18 @@ li.lang_mob > ul > li {
 
 @media (max-width: 480px) {
 	nav {
-		width: 160px;
-		right: -165px;
+		width : 240px;
+		right: -245px;
 	}
 
 	nav.mob::after {
-		right: 160px;
+		right: 240px;
+	}
+
+	li.lang_mob > ul {
+		display: flex;
+		justify-content: space-between;
+		width: 80px;
+		height: 30px;
 	}
 }
