--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
 footer {
-	position: absolute;
-	bottom: 0;
+	position: relative;
+	display: table-row !important;
 	width: 100%;
+	height: 1px;
 }
 
 .footer_wrapper {
@@ -61,7 +62,7 @@ footer a {
 }
 
 footer a:hover {
-	color: rgba(169, 0, 0, 1)
+	color: rgba(169, 0, 0, 1);
 }
 
 .down_level {
