--- a/css/content.css
+++ b/css/content.css
@@ -29,6 +29,11 @@ div.text  {
 	background-color: rgba(255, 255, 255, 1);
 }
 
+div.text {
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
 div.video_wrap,
 div.prod_types > ul,
 div.preview_wrap,
