--- a/css/content.css
+++ b/css/content.css
@@ -4,24 +4,25 @@ div.content {
 	position: relative;
 	width: 100%;
 	color: rgba(51, 51, 51, 1);
-	margin-top: 90px;
+	margin-top: 70px;
 }
 
-/* div.video {
+div.video {
 	position: relative;
 	width: 100%;
-	padding-top: 220px;
-	padding-bottom: 50px;
+	height: 100vh;
+	overflow: hidden;
 }
 
-video {
-	object-fit: cover;
+div.video > video {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-} */
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+}
 
 div.prod_types,
 div.text  {
@@ -29,12 +30,16 @@ div.text  {
 	background-color: rgba(255, 255, 255, 1);
 }
 
+div.prod_types {
+	margin-top: 40px;
+}
+
 div.text {
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
 
-div.video_wrap,
+div.video_cover,
 div.prod_types > ul,
 div.preview_wrap,
 div.text_container {
@@ -45,20 +50,29 @@ div.text_container {
 	margin-right: auto;
 }
 
+div.video_cover > div {
+	position: relative;
+	padding: 10px 10px 10px 20px;
+	background-color: rgba(255, 255, 255, 0.8);
+	z-index: 3;
+}
+
+div.video_cover > div > p {
+	text-transform: uppercase;
+}
+
 div.text_container {
 	padding: 50px 20px 30px 20px;
 }
 
 div.prod_types > ul > li {
 	position: relative;
-	margin-bottom: 40px;
 	overflow: hidden;
 }
 
 div.prod_types > ul > li > a {
 	display: block;
 	width: 100%;
-	transition: all 0.25s;
 }
 
 div.prod_types > ul > li span {
@@ -67,31 +81,28 @@ div.prod_types > ul > li span {
 	width: 100%;
 	top: 0;
 	left: 0;
-	font : normal 31px/43px "Light", Arial, sans-serif;
 	color: rgba(51, 51, 51, 1);
 	text-align: center;
 	text-transform: uppercase;
-	padding-top: 15px;
-	padding-bottom: 15px;
 	background-color: rgba(255, 255, 255, .3);
+	transition: all .25s ease;
 	z-index: 5;
 }
 
 div.prod_types > ul > li > a:hover > span {
 	color: rgba(169, 0, 0, 1);
 	background-color: rgba(255, 255, 255, .7);
-	transition: all .25s;
 }
 
 div.prod_types > ul > li > a:hover > img {
 	transform: scale(1.1);
-	transition: all .25s;
 }
 
 div.prod_types > ul > li img {
 	display: block;
 	width: 100%;
 	height: auto;
+	transition: all .25s ease;
 }
 
 div.preview {
@@ -127,7 +138,7 @@ div.content h2 {
 
 div.content a {
 	color: rgba(214, 0, 0, 1);
-	transition : .25s ease;
+	transition : all .25s ease;
 }
 
 div.content a:hover {
@@ -140,6 +151,7 @@ div.text p {
 }
 
 @media (min-width: 1041px) and (max-width: 1400px) {
+	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
@@ -148,12 +160,30 @@ div.text p {
 }
 
 @media (min-width: 1041px) {
+	div.video_cover > div {
+		margin-top: 20%;
+		margin-right: 5%;
+		margin-left: 45%;
+	}
+
+	div.video_cover > div > p {
+		font : normal 27px/34px "Light", Arial, sans-serif;
+		text-align: justify;
+	}
+
 	div.prod_types > ul > li {
 		width: calc((100% - 60px) / 4);
+		margin-bottom: 40px;
 	}
 
 	div.prod_types > ul > li:not(:last-child) {
 		margin-right: 20px;
+	}
+
+	div.prod_types > ul > li span {
+		font : normal 31px/43px "Light", Arial, sans-serif;
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 
 	div.preview_wrap > div  {
@@ -184,10 +214,17 @@ div.text p {
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
+	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container   {
 		width: calc(100% - 80px);
+	}
+
+	div.prod_types > ul > li span {
+		font : normal 31px/43px "Light", Arial, sans-serif;
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 
 	div.preview > div {
@@ -202,7 +239,6 @@ div.text p {
 
 	div.preview p {
 		font : normal 18px/25px "Light", Arial, sans-serif;
-		text-align: justify;
 	}
 
 	div.text p {
@@ -211,12 +247,28 @@ div.text p {
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
+	div.video_cover > div {
+		margin-top: 25%;
+		margin-right: 5%;
+		margin-left: 5%;
+	}
+
+	div.video_cover > div > p {
+		font : normal 24px/34px "Light", Arial, sans-serif;
+		text-align: left;
+	}
+
 	div.prod_types > ul > li {
 		width: calc((100% - 40px) / 2);
+		margin-bottom: 40px;
 	}
 
 	div.prod_types > ul > li:nth-child(odd) {
 		margin-right: 40px;
+	}
+
+	div.preview p {
+		text-align: justify;
 	}
 }
 
@@ -237,30 +289,61 @@ div.text p {
 
 	div.preview p {
 		font: normal 16px/25px "Light", Arial, sans-serif;
-		text-align: justify;
 	}
 
 	div.text p {
-		font : normal 16px/27px "Light", Arial, sans-serif;
+		font : normal 22px/27px "Light", Arial, sans-serif;
 	}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
+	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
 		width: calc(100% - 60px);
 	}
+
+	div.prod_types > ul > li span {
+		font : normal 27px/43px "Light", Arial, sans-serif;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
 }
 
 @media (max-width: 480px) {
+	div.video_cover,
 	div.prod_types > ul,
 	div.preview_wrap,
 	div.text_container {
 		width: calc(100% - 40px);
 	}
 
+	div.video_cover > div {
+		margin-top: 180px;
+	}
+
+	div.video_cover > div > p {
+		font : normal 20px/34px "Light", Arial, sans-serif;
+		text-align: left;
+	}
+
 	div.prod_types > ul > li {
-		width: 100%;
+		width: calc((100% - 40px) / 2);
+		margin-bottom: 20px;
+	}
+
+	div.prod_types > ul > li:nth-child(odd) {
+		margin-right: 20px;
+	}
+
+	div.prod_types > ul > li span {
+		font : normal 20px/37px "Light", Arial, sans-serif;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	div.preview p {
+		text-align: left;
 	}
 }
