--- a/css/header.css
+++ b/css/header.css
@@ -25,7 +25,7 @@ a.logo {
 	display: block;
 	position: relative;
 	height: 50px;
-	background: url("../img/logo.png") no-repeat 50% 50%;
+	background: url("../img/logo.png") no-repeat 0 50%;
 	background-size: contain;
 }
 
@@ -47,7 +47,7 @@ ul.mob_menu > li {
 	background-color: rgba(255, 10, 10, 1);
 	left: 0;
 	border-radius: 2px;
-	transition: all 0.25s;
+	transition: all 0.25s ease;
 }
 
 ul.mob_menu > li:first-child,
@@ -112,7 +112,7 @@ li.eng > a, li.fr > a {
 	display: block;
 	width: 100%;
 	height: 100%;
-	transition: all 0.25s;
+	transition: all .25s ease;
 }
 
 li.eng > a:hover, li.fr > a:hover {
