--- a/css/nav.css
+++ b/css/nav.css
@@ -16,6 +16,9 @@ nav > ul > li {
 nav span.selected {
 	color: rgba(255, 10, 10, 1);
 }
+nav a {
+	transition: all .25s ease;
+}
 
 nav a:hover {
 	color: rgba(230, 46, 46, 1);
@@ -59,13 +62,14 @@ nav a:hover {
 	}
 
 	nav.mob > ul {
-		padding: 30px 20px 20px 20px;
+		padding: 20px 20px 20px 40px;
 	}
 
 	nav.mob > ul > li {
 		color: rgba(119, 119, 119, 1);
 		margin-bottom: 20px;
 	}
+
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
@@ -76,6 +80,10 @@ nav a:hover {
 
 	nav.mob::after {
 		right: 320px;
+	}
+
+	nav.mob > ul > li:nth-child(2) {
+		padding-top: 40px;
 	}
 }
 
@@ -94,5 +102,9 @@ nav a:hover {
 		justify-content: space-between;
 		width: 80px;
 		height: 30px;
+	}
+
+	nav.mob > ul > li:first-child {
+		padding-bottom: 20px;
 	}
 }
