--- a/css/content.css
+++ b/css/content.css
@@ -10,7 +10,7 @@ div.content {
 div.video {
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 70px);
 	overflow: hidden;
 }
 
@@ -39,7 +39,6 @@ div.text {
 	padding-bottom: 50px;
 }
 
-div.video_cover,
 div.prod_types > ul,
 div.preview_wrap,
 div.text_container {
@@ -50,8 +49,17 @@ div.text_container {
 	margin-right: auto;
 }
 
-div.video_cover > div {
+div.video_cover {
 	position: relative;
+	max-width: 1170px;
+	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	z-index: 2;
+}
+
+div.video_cover > div {
+	position: absolute;
 	padding: 10px 10px 10px 20px;
 	background-color: rgba(255, 255, 255, 0.8);
 	z-index: 3;
@@ -162,13 +170,14 @@ div.text p {
 
 @media (min-width: 1041px) {
 	div.video_cover > div {
-		margin-top: 20%;
-		margin-right: 5%;
-		margin-left: 45%;
+		min-width: 35%;
+		max-width: 50%;
+		right: 0;
+		bottom: 60px;
 	}
 
 	div.video_cover > div > p {
-		font : normal 27px/34px "Light", Arial, sans-serif;
+		font : normal 26px/34px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li {
@@ -221,6 +230,16 @@ div.text p {
 		width: calc(100% - 80px);
 	}
 
+	div.video_cover > div {
+		width: 40%;
+		right: 0;
+		bottom: 40px;
+	}
+
+	div.video_cover > div > p {
+		font : normal 24px/30px "Light", Arial, sans-serif;
+	}
+
 	div.prod_types > ul > li span {
 		font : normal 31px/43px "Light", Arial, sans-serif;
 		padding-top: 15px;
@@ -247,15 +266,6 @@ div.text p {
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
-	div.video_cover > div {
-		margin-top: 25%;
-		margin-right: 5%;
-		margin-left: 5%;
-	}
-
-	div.video_cover > div > p {
-		font : normal 24px/34px "Light", Arial, sans-serif;
-	}
 
 	div.prod_types > ul > li {
 		width: calc((100% - 40px) / 2);
@@ -303,6 +313,16 @@ div.text p {
 		width: calc(100% - 60px);
 	}
 
+	div.video_cover > div {
+		width: 70%;
+		right: 0;
+		bottom: 30px;
+	}
+
+	div.video_cover > div > p {
+		font : normal 23px/30px "Light", Arial, sans-serif;
+	}
+
 	div.prod_types > ul > li span {
 		font : normal 27px/43px "Light", Arial, sans-serif;
 		padding-top: 10px;
@@ -319,11 +339,11 @@ div.text p {
 	}
 
 	div.video_cover > div {
-		margin-top: 180px;
+		bottom: 20px;
 	}
 
 	div.video_cover > div > p {
-		font : normal 20px/34px "Light", Arial, sans-serif;
+		font : normal 20px/28px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li {
