--- a/css/content.css
+++ b/css/content.css
@@ -135,8 +135,11 @@ div.preview.production {
 }
 
 div.preview_wrap > div {
-	padding: 50px;
 	background-color: rgba(255, 255, 255, .8);
+}
+
+div.preview_wrap p {
+	margin-bottom: 20px;
 }
 
 div.content h2 {
@@ -197,6 +200,7 @@ div.text p {
 
 	div.preview_wrap > div  {
 		width: calc((100% - 40px) / 2);
+		padding: 50px;
 	}
 
 	div.preview.expertise > div > div {
@@ -249,6 +253,7 @@ div.text p {
 	div.preview > div {
 		width: 680px;
 		align-self: center;
+		padding: 50px;
 	}
 
 	div.content h2 {
@@ -324,9 +329,13 @@ div.text p {
 	}
 
 	div.prod_types > ul > li span {
-		font : normal 27px/43px "Light", Arial, sans-serif;
+		font : normal 23px/40px "Light", Arial, sans-serif;
 		padding-top: 10px;
 		padding-bottom: 10px;
+	}
+
+	div.preview_wrap > div {
+		padding: 30px;
 	}
 }
 
@@ -343,11 +352,11 @@ div.text p {
 	}
 
 	div.video_cover > div > p {
-		font : normal 20px/28px "Light", Arial, sans-serif;
+		font : normal 16px/28px "Light", Arial, sans-serif;
 	}
 
 	div.prod_types > ul > li {
-		width: calc((100% - 40px) / 2);
+		width: calc((100% - 20px) / 2);
 		margin-bottom: 20px;
 	}
 
@@ -356,9 +365,13 @@ div.text p {
 	}
 
 	div.prod_types > ul > li span {
-		font : normal 20px/37px "Light", Arial, sans-serif;
+		font : normal 18px/20px "Light", Arial, sans-serif;
 		padding-top: 10px;
 		padding-bottom: 10px;
+	}
+
+	div.preview_wrap > div {
+		padding: 20px;
 	}
 
 	div.preview p {
