--- a/css/content.css
+++ b/css/content.css
@@ -30,10 +30,6 @@ div.text  {
 	background-color: rgba(255, 255, 255, 1);
 }
 
-div.prod_types {
-	margin-top: 40px;
-}
-
 div.text {
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -142,6 +138,20 @@ div.preview_wrap p {
 	margin-bottom: 20px;
 }
 
+div.preview_wrap p > a::after {
+	content: "\203A";
+	position: absolute;
+	width: 20px;
+	height: 25px;
+	text-align: center;
+	transition: all .25s ease;
+}
+
+div.preview_wrap p > a:hover::after {
+	transform: translateX(5px);
+}
+
+
 div.content h2 {
 	margin-top: 20px;
 	margin-bottom: 10px;
@@ -186,6 +196,10 @@ div.text p {
 	div.prod_types > ul > li {
 		width: calc((100% - 60px) / 4);
 		margin-bottom: 40px;
+	}
+
+	div.prod_types > ul {
+		margin-top: 40px;
 	}
 
 	div.prod_types > ul > li:not(:last-child) {
@@ -277,6 +291,10 @@ div.text p {
 		margin-bottom: 40px;
 	}
 
+	div.prod_types > ul {
+		margin-top: 40px;
+	}
+
 	div.prod_types > ul > li:nth-child(odd) {
 		margin-right: 40px;
 	}
@@ -358,6 +376,10 @@ div.text p {
 	div.prod_types > ul > li {
 		width: calc((100% - 20px) / 2);
 		margin-bottom: 20px;
+	}
+
+	div.prod_types > ul {
+		margin-top: 20px;
 	}
 
 	div.prod_types > ul > li:nth-child(odd) {
