--- a/css/nav.css
+++ b/css/nav.css
@@ -47,10 +47,20 @@ nav a:hover {
 		background-color: rgba(250, 250, 250, 1);
 	}
 
+	nav > ul {
+		display: flex;
+		flex-direction: column;
+		padding: 20px 20px 20px 40px;
+	}
+
 	nav.mob {
 		top: 0;
 		right: 0;
-		transition: all .25s ease-out;
+	}
+
+	nav > ul > li {
+		color: rgba(119, 119, 119, 1);
+		margin-bottom: 20px;
 	}
 
 	nav.mob::after {
@@ -62,15 +72,10 @@ nav a:hover {
 		background-color: rgba(0, 0, 0, .15);
 	}
 
-	nav.mob > ul {
-		padding: 20px 20px 20px 40px;
-	}
-
 	nav.mob > ul > li {
 		color: rgba(119, 119, 119, 1);
 		margin-bottom: 20px;
 	}
-
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
@@ -83,7 +88,7 @@ nav a:hover {
 		right: 320px;
 	}
 
-	nav.mob > ul > li:nth-child(2) {
+	nav > ul > li:nth-child(2) {
 		padding-top: 40px;
 	}
 }
@@ -105,7 +110,7 @@ nav a:hover {
 		height: 30px;
 	}
 
-	nav.mob > ul > li:first-child {
+	nav > ul > li:first-child {
 		padding-bottom: 20px;
 	}
 }
