--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ div.container {
 	min-height: 100%;
 	margin: 0 auto;
 	color: rgb(51, 51, 51);
-	transition: all .25s ease-out;
+	transition: all .25s ease;
 }
 
 a {
