--- a/css/content.css
+++ b/css/content.css
@@ -24,6 +24,12 @@ div.video > video {
 	z-index: 1;
 }
 
+div.video > span {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 div.prod_types,
 div.text  {
 	width: 100%;
