--- a/css/content.css
+++ b/css/content.css
@@ -117,7 +117,9 @@ div.preview {
 div.preview.expertise {
 	padding-top: 100px;
 	padding-bottom: 50px;
-	background: url("../img/fleurs.jpg") no-repeat 50% 0;
+	background: url("../img/fleurs.jpg");
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -125,7 +127,9 @@ div.preview.expertise {
 div.preview.production {
 	padding-top: 250px;
 	padding-bottom: 50px;
-	background: url("../img/drop.jpg") no-repeat 50% 0;
+	background: url("../img/drop.jpg");
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 }
