--- a/css/header.css
+++ b/css/header.css
@@ -1,98 +1,95 @@
 @charset "UTF-8";
 
-header {
+div.container > header {
 	position: fixed;
 	width: 100%;
 	height: 70px;
 	background-color: rgba(250, 250, 250, 1);
 	top: 0;
-	z-index: 10;
+	z-index: 1;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	box-shadow: 1px 1px 1px 1px rgba(245, 245, 245, 1);
-	transition: all .25s ease-out;
+	transition: all .25s ease;
 }
 
-.header_wrap {
+div.container > header > .header_wrap {
 	position: relative;
 	max-width: 1170px;
-	height: 50px;
-	margin-left: auto;
-	margin-right: auto;
+	/* height: 50px; */
+	margin: 0 auto;
 }
 
 a.logo {
 	display: block;
 	position: relative;
 	height: 50px;
-	background: url("../img/logo.png") no-repeat 0 50%;
+	background-image: url("../img/logo.png");
+	background-position: 0 50%;
+	background-repeat: no-repeat;
 	background-size: contain;
 }
 
 ul.mob_menu {
 	position: absolute;
-	width: 40px;
-	height: 30px;
+	width: 28px;
+	height: 28px;
 	top: 10px;
+	margin: 0;
 	overflow: hidden;
-}
-
-ul.mob_menu:hover {
 	cursor: pointer;
+	z-index: 10;
 }
 
 ul.mob_menu > li {
+	display: inherit;
 	position: inherit;
-	height: 4px;
+	height: 2px;
+	width: 100%;
 	background-color: rgba(255, 10, 10, 1);
 	left: 0;
-	border-radius: 2px;
 	transition: all 0.25s ease;
+	z-index: inherit;
 }
 
 ul.mob_menu > li:first-child,
 ul.mob_menu > li:nth-child(2) {
-	top: 12px;
-	width: 66%;
+	top: calc(50% - 1px);
+	width: 66.666%;
+	transform: rotate(0);
 }
 
+div.container.opened ul.mob_menu > li,
 ul.mob_menu:hover > li:first-child,
-ul.mob_menu:hover > li:nth-child(2) {
+ul.mob_menu:hover > li:nth-child(2),
+ul.mob_menu:hover > li:nth-child(3),
+ul.mob_menu > li:last-child {
 	width: 100%;
 }
 
 ul.mob_menu > li:nth-child(3) {
 	top: 0;
-	width: 33%;
-}
-
-ul.mob_menu:hover > li:nth-child(3) {
-	width: 100%;
+	width: 33.333%;
 }
 
 ul.mob_menu > li:last-child {
 	bottom: 0;
-	width: 100%;
 }
 
-ul.mob_menu.opened > li:first-child {
-	transform: rotate(43deg);
+div.container.opened ul.mob_menu > li:first-child {
+	transform: rotate(45deg);
 }
 
-ul.mob_menu.opened > li:nth-child(2) {
-	transform: rotate(-43deg);
+div.container.opened ul.mob_menu > li:nth-child(2) {
+	transform: rotate(-45deg);
 }
 
-ul.mob_menu.opened > li:nth-child(3) {
-	top: -10px;
+div.container.opened ul.mob_menu > li:nth-child(3) {
+	top: -2px;
 }
 
-ul.mob_menu.opened > li:last-child {
-	bottom: -10px;
-}
-
-ul.mob_menu.opened > li {
-	width: 100%;
+div.container.opened ul.mob_menu > li:last-child {
+	bottom: -2px;
 }
 
 header ul.lang_choice {
@@ -152,7 +149,7 @@ li.fr > a {
 
 @media (max-width: 1040px) {
 	ul.mob_menu {
-		right: 0;
+		right: 20px;
 	}
 }
 
@@ -177,11 +174,6 @@ li.fr > a {
 		display: flex;
 		right: 100px;
 	}
-
-	div.container.opened,  header.opened {
-		right: 320px;
-		transition: all .25s ease;
-	}
 }
 
 @media (max-width: 480px) {
@@ -194,10 +186,5 @@ li.fr > a {
 
 	ul.lang_choice {
 		display: none;
-	}
-
-	div.container.opened, header.opened {
-		right: 240px;
-		transition: all .25s ease;
 	}
 }
