--- a/css/nav.css
+++ b/css/nav.css
@@ -3,14 +3,15 @@
 nav {
 	position: fixed;
 	font : normal 20px/30px "Light", Arial, sans-serif;
+	z-index: 11;
 	transition: all .25s ease;
 }
 
 nav > ul {
+	display: flex;
 	width: 100%;
-}
-
-nav > ul > li {
+	margin: 0;
+	padding: 0;
 	text-transform: uppercase;
 }
 
@@ -27,91 +28,54 @@ nav a:hover {
 }
 
 @media (min-width: 1041px) {
-	nav {
+	div.container > nav {
 		top: 20px;
-		left: calc(50% - 240px);
-		width: 560px;
-		z-index: 11;
+		left: calc(50% - 280px);
 	}
 
 	nav > ul {
-		display: flex;
+		width: 560px;
 		justify-content: space-around;
 	}
 }
 
 @media (max-width: 1040px) {
-	nav {
+	div.container > nav {
 		height: 100vh;
+		top: 0;
+		left: 100%;
 		box-shadow: -1px 0 10px rgba(0, 0, 0, 0.15);
-		z-index: 25;
+		padding-top: 90px;
+		padding-left: 20px;
 		background-color: rgba(250, 250, 250, 1);
 	}
 
-	nav > ul {
-		display: flex;
-		flex-direction: column;
-		padding: 20px 20px 20px 40px;
+	div.container.opened > nav {
+		left: calc(100% - 240px);
 	}
 
-	nav.mob {
-		top: 0;
-		right: 0;
+	div.container.opened > nav > ul {
+		opacity: 1;
 	}
 
-	nav > ul > li {
+	div.container > nav > ul {
+		flex-wrap: wrap;
+		opacity: 0;
+	}
+
+	div.container > nav > ul > li {
+		width: 100%;
 		color: rgba(119, 119, 119, 1);
 		margin-bottom: 20px;
-	}
-
-	nav.mob::after {
-		content: "";
-		position: absolute;
-		top: 70px;
-		width: 100vw;
-		height: calc(100vh - 70px);
-		background-color: rgba(0, 0, 0, .15);
-	}
-
-	nav.mob > ul > li {
-		color: rgba(119, 119, 119, 1);
-		margin-bottom: 20px;
-	}
-}
-
-@media (min-width: 481px) and (max-width: 1040px) {
-	nav {
-		width: 320px;
-		right: -325px;
-	}
-
-	nav.mob::after {
-		right: 320px;
-	}
-
-	nav > ul > li:nth-child(2) {
-		padding-top: 40px;
 	}
 }
 
 @media (max-width: 480px) {
-	nav {
-		width : 240px;
-		right: -245px;
-	}
-
-	nav.mob::after {
-		right: 240px;
-	}
-
-	li.lang_mob > ul {
+		li.lang_mob > ul {
 		display: flex;
 		justify-content: space-between;
 		width: 80px;
 		height: 30px;
 	}
 
-	nav > ul > li:first-child {
-		padding-bottom: 20px;
-	}
 }
