--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 div.container {
 	position: relative;
 	display: table !important;
+	left: 0;
 	width: 100%;
 	min-height: 100%;
 	margin: 0 auto;
@@ -23,3 +24,16 @@ a {
 ul {
 	list-style: none;
 }
+
+@media (min-width: 1041px) {
+	div.container {
+		left: 0;
+		}
+	}
+
+@media (max-width: 1040px) {
+	div.container.opened {
+		left: -240px;
+		min-width: 100vw;
+		}
+	}
