--- a/css/nav.css
+++ b/css/nav.css
@@ -68,6 +68,17 @@ nav a:hover {
 		color: rgba(119, 119, 119, 1);
 		margin-bottom: 20px;
 	}
+
+	div.container.opened::after {
+		content: "";
+		position: absolute;
+		top: 70px;
+		width: 100vw;
+		height: calc(100% - 70px);
+		background-color: rgba(0, 0, 0, .3);
+		/* z-index: 2; */
+	}
+
 }
 
 @media (max-width: 480px) {
