--- a/css/content.css
+++ b/css/content.css
@@ -116,11 +116,6 @@ div.preview {
 div.preview.expertise {
 	padding-top: 100px;
 	padding-bottom: 50px;
-	background: url("../img/fleurs.jpg");
-	/* background-position: 50% 50%; */
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
 }
 
 div.preview.production {
@@ -364,6 +359,16 @@ div.text p {
 	}
 }
 
+@media (min-width: 481px) {
+	div.preview.expertise {
+		background: url("../img/fleurs.jpg");
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
+	}
+}
+
 @media (max-width: 480px) {
 	div.video_cover,
 	div.prod_types > ul,
@@ -391,6 +396,14 @@ div.text p {
 
 	div.prod_types > ul > li:nth-child(odd) {
 		margin-right: 20px;
+	}
+
+	div.preview.expertise {
+		background: url("../img/fleurs_mob.jpg");
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
 	}
 
 	div.prod_types > ul > li span {
