--- a/css/content.css
+++ b/css/content.css
@@ -116,7 +116,7 @@ div.preview {
 div.preview.expertise {
 	padding-top: 100px;
 	padding-bottom: 50px;
-	background-image: url("../img/fleurs_mob.jpg");
+	background-image: url("../img/fleurs.jpg");
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-size: cover;
