--- a/css/nav.css
+++ b/css/nav.css
@@ -68,6 +68,10 @@ nav a:hover {
 		margin-bottom: 20px;
 	}
 
+	div.container > nav > ul > li:first-child {
+		margin-bottom: 50px;
+	}
+
 	div.container.opened::after {
 		content: "";
 		position: absolute;
