--- a/css/nav.css
+++ b/css/nav.css
@@ -43,7 +43,7 @@ nav a:hover {
 	div.container > nav {
 		height: 100vh;
 		top: 0;
-		left: 100%;
+		left: calc(100% + 10px);
 		box-shadow: -1px 0 10px rgba(0, 0, 0, 0.15);
 		padding-left: 20px;
 		background-color: rgba(250, 250, 250, 1);
