--- a/css/nav.css
+++ b/css/nav.css
@@ -41,12 +41,12 @@ nav a:hover {
 
 @media (max-width: 1040px) {
 	div.container > nav {
-		height: 100vh;
-		top: 0;
+		height: calc(100vh - 70px);
+		top: 70px;
 		left: calc(100% + 10px);
-		box-shadow: -1px 0 10px rgba(0, 0, 0, 0.15);
+		box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.15);
 		padding-left: 20px;
-		background-color: rgba(250, 250, 250, 1);
+		background-color: rgba(255, 255, 255, 1);
 	}
 
 	div.container.opened > nav {
@@ -68,9 +68,9 @@ nav a:hover {
 		margin-bottom: 20px;
 	}
 
-	div.container > nav > ul > li:first-child {
+	/* div.container > nav > ul > li:first-child {
 		margin-bottom: 50px;
-	}
+	} */
 
 	div.container.opened::after {
 		content: "";
@@ -80,24 +80,24 @@ nav a:hover {
 		height: calc(100% - 70px);
 		background-color: rgba(0, 0, 0, .15);
 	}
-
 }
 
 @media (min-width: 481px) and (max-width: 1040px) {
 	div.container > nav {
-		padding-top: 50px;
+		padding-top: 20px;
 	}
 }
 
 @media (max-width: 480px) {
-		li.lang_mob > ul {
+		/* li.lang_mob > ul {
 		display: flex;
 		justify-content: space-between;
 		width: 80px;
 		height: 30px;
-	}
+	} */
 
 	div.container > nav {
+
 		padding-top: 20px;
 	}
 
